@@ -1,6 +1,7 @@
 package Hailo::Storage::SQL;
 use 5.10.0;
 use Moose;
+use MooseX::StrictConstructor;
 use MooseX::Types::Moose qw<ArrayRef HashRef Int Str Bool>;
 use DBI;
 use List::Util qw<shuffle>;
